# MLOps_PracticaFinal

./: .dockerignore  .gitignore  Dockerfile  README.md  arquietectura_prop.txt  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
models/: ResNet_Final_Combined.pth
notebook/: DL_Practica_final_25_26_MValbuena.ipynb  DL_Practica_final_25_26_Refactor.ipynb
src/: api.py  api_inferencia.py  logging_config.py  main.py  model.py  train.py  utils.py
test/: conftest.py  test_api.py  test_model.py  test_prueba.py  test_utils.py
wandb/run-20260515_173422-byva99ev/: run-byva99ev.wandb
wandb/run-20260515_174010-xuno11av/: run-xuno11av.wandb
wandb/run-20260515_174035-djzrjjve/: run-djzrjjve.wandb
wandb/run-20260515_174346-st4ar66b/: run-st4ar66b.wandb
wandb/run-20260515_174346-st4ar66b/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260515_175531-6u1kf54u/: run-6u1kf54u.wandb
wandb/run-20260515_175531-6u1kf54u/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
